--- a/collection/figureBed/index.html
+++ b/collection/figureBed/index.html
@@ -1,6 +1,7 @@
 <body>
+    <div style="text-align: center;"><img src="./assets/ssmm.jpg"/></div>
     <div style="max-width:1200px;margin:0 auto;text-align: center;margin-top: 150px;">
-        <input type="file" class="file" name="file" multiple="multiple" /><button id='toDisplay'>查阅全部</button>
+        <input type="file" label='1' class="file" name="file" multiple="multiple" accept="image/*"/><button id='toDisplay'>查阅全部</button>
         <ul id='urlList'></ul>
     </div>
 </body>
