--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
             margin: 0 auto;
             text-align: center;
             margin-bottom: 30px;
-            user-select: none;
         }
 
         .content-wrap {
             max-width: 1200px;
             margin: 0 auto;
-            height: 500px;
+            height: 550px;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -84,11 +83,6 @@
             font-size: 14px;
             color: #a1a1a1;
             text-align: center;
-        }
-
-        .surprise {
-            color: #fff;
-            user-select: text;
         }
 
         .btn-f12 {
@@ -219,19 +213,36 @@
             text-align: right;
         }
 
-        .slideTip,
-        .slideTip1 {
+        .slideTip {
             color: rgb(163, 108, 6);
             margin-top: 15px;
             box-shadow: 0px 0px 5px rgb(163, 108, 6);
             padding: 0 5px;
             border-radius: 2px;
+            cursor: default;
+        }
+
+        .tip-span {
+            font-size: 0.8rem;
+            color: #999;
+        }
+
+        .tab-bar {
+            box-shadow: -2px 2px 1px rgb(238, 173, 87);
         }
 
         /* 移动端 */
         @media screen and (max-width: 768px) {
             img.topleft {
                 opacity: 0.2;
+            }
+
+            #f12 {
+                display: none;
+            }
+
+            .footer {
+                display: none;
             }
         }
     </style>
@@ -241,15 +252,17 @@
     <div class="coffee_cup loader"></div>
     <div class="home" style="display: none;">
         <!-- slogan -->
-        <h3 class="principle">生命以负<span title='傲慢、贪婪、色欲、嫉妒、暴食、愤怒、怠惰'>熵</span>为食
+        <!-- <h3 class="principle">生命以负<span title='傲慢、贪婪、色欲、嫉妒、暴食、愤怒、怠惰'>熵</span>为食
             <img id='rotate' src="./assets/img/sun.svg" width="50" height="50" title='愿你今日美好' type="image/svg+xml" />
-        </h3>
+        </h3> -->
+        <h3 class="principle">黄沙百战穿金甲 不破楼兰终不还 <img id='rotate' src="./assets/img/sun.svg" width="50" height="50" title='愿你今日美好' type="image/svg+xml" /></h3>
         <img src="./assets/img/tree.png" alt="" class="topleft">
         <!-- 内容 -->
         <div class="content-wrap">
             <div class="intro">
                 <div class="chinese-wrapper">
-                    <p class="intro-line"><b>你好！</b> 遇见即是缘起，很高兴能遇见你！你可以叫我 —— <b>阿燃</b>！<span
+                    <p class="intro-line"><b class="tab-bar">你好</b></p>
+                    <p class="intro-line">遇见即是缘起，很高兴能遇见你！你可以叫我 —— <b>阿燃</b>！<span
                             style="font-size: 12px;color:#666">（AKA：<a title="吾本是58粉，后亦是风尘四侠粉，社会我瓜哥，人狠话不多，懂的都懂"
                                 target="_blank" href="https://juejin.im/user/5bcd67a8e51d457947022910">掘金安东尼</a>）</span>
                     </p>
@@ -269,19 +282,33 @@
                             title="人在蒙古、刚下航母、麻省毕业、长相彦祖"><a target="_blank"
                                 href="https://www.zhihu.com/people/tu-tu-tu-tu-tu-25-1">知乎</a></span>、<span
                             title="心有猛虎 细嗅蔷薇"><a target="_blank"
-                                href="https://www.huxiu.com/member/2412214.html">虎嗅</a></span>。我将在这些平台保持活跃，你愿意与我同行吗？</p>
-                    <p class="intro-line surprise"><span title="F12 / Ctrl+Shift+C" class="btn-f12">F12</span>
-                        有彩蛋!
-                    </p>
+                                href="https://www.huxiu.com/member/2412214.html">虎嗅</a></span>、<span
+                            title="每日一题，健康幸福一百年"><a target="_blank"
+                                href="https://leetcode-cn.com/u/tuaran/">力扣</a></span>。我将努力在这些平台保持活跃，你愿意与我同行吗？</p>
                     <p class="intro-line"></p>
+
+                    <p class="intro-line"><b class="tab-bar">资源</b></p>
+                    <p class="intro-line">1. 如果你想加群？进击的前端群、程序员兼职群、程序员炒股群、微信读书群；</p>
+                    <p class="intro-line">2. 如果你想获取学习资源？前端学习资料、Vue 教学视频、Adobe 等破解软件；</p>
+                    <p class="intro-line">3. 如果你有不错的项目想法？需要帮手？我就是你的资源！</p>
+                    <p class="intro-line">加微信号：<span style="color:orange;user-select:text;"><i>Ifuckinghigh</i>
+                        </span><span class="tip-span">（Tip：公众号维护中，请耐心等待~）</span></p>
+                    <p class="intro-line"></p>
+
+                    <p class="intro-line"><b class="tab-bar">项目</b></p>
                     <p class="intro-line">同时，我在自己的 ECS 上搭建了一些 web 服务。致力于做<b>有用的</b>个人站点！以下：</p>
                     <p class="intro-line"><span title="这是一个前端开发在学习路上对浏览器书签收纳整理的网站！">1. 前端书签网 <a target="_blank"
-                                href="http://febm.tuaran.site">febm.tuaran.site</a>；</span></p>
+                                href="http://febm.tuaran.site">febm.tuaran.site</a>；<span
+                                class="tip-span">（前端书签集大成者，持续维护）</span></span></p>
                     <p class="intro-line"><span title="你可以在上面记录你的每天，每天都立Flag！O(∩_∩)O">2. 每日一立 <a target="_blank"
-                                href="http://ddup.tuaran.site">ddup.tuaran.site</a>；</span></p>
+                                href="http://ddup.tuaran.site">ddup.tuaran.site</a>；<span class="tip-span">（每日都立
+                                Flag？持续维护）</span></span></p>
                     <p class="intro-line"><span title="免费的图床服务！你要的图床功能，我都可以有！">3. 图床服务 <a target="_blank"
-                                href="http://120.78.205.57:3000">tarsFigureBed</a>；</span></p>
-                    <p class="intro-line"></p>
+                                href="http://120.78.205.57:3000">tarsFigureBed</a>；<span
+                                class="tip-span">（免费图床，持续维护）</span></span></p>
+                    <p class="intro-line"><span title="免费的图床服务！你要的图床功能，我都可以有！">4. 更多......<span
+                                class="tip-span">（期待合作，合作共赢）</span</span> </p> <p class="intro-line">
+                    </p>
                 </div>
                 <div class="english-wrapper" style="display:none;">
                     <p class="intro-line"><b> HELLO! </b>Meeting is fate, it’s nice to meet you!you can call me
@@ -304,9 +331,7 @@
                             title=""><a target="_blank" href="https://twitter.com/tarsixseveneig1">twitter</a></span>.
                     </p>
                     <p class="intro-line">I will remain active on these platforms. Will you walk with me?</p>
-                    <p class="intro-line surprise"><span title="F12 / Ctrl+Shift+C" class="btn-f12">F12</span>
-                        There is Easter eggs!
-                    </p>
+                    <p class="intro-line"></p>
                     <p class="intro-line"></p>
                     <p class="intro-line">At the same time, I built some web services on my ECS.
                         Committed to being a<b> useful </b> personal site!</p>
@@ -320,13 +345,12 @@
                 </div>
                 <!-- 右上角MENU -->
                 <p class="intro-line translate">
-                    <span title='摊牌了，不装了，F12有彩蛋' id='f12'> | F12 </span>
+                    <span id='f12'> | F12 </span>
                     <span id="toEnglish"> | Engilish | </span><span id="toChinese" style="display: none;"> | 中文 |
                     </span>
                     <br>
                     <span class="slideTip" style="display: none;">控制台 Console 有彩蛋！</span>
                     <br>
-                    <span class="slideTip1" style="display: none;">啥？不会浏览器调试？加我微信号 <span style="color: orange;">Ifuckinghigh</span>，手把手教你看~</span>
                 </p>
             </div>
         </div>
@@ -338,7 +362,6 @@
                     target="_blank" class="bottom-link" href='https://search.google.com/search-console'> Google Search
                     Console</a> | <a class="bottom-link" href="https://cloud.google.com">More Support</a></div>
         </div>
-        <!-- 右下角 -->
         <div class="footer-p uareawsome">
             <div id="resume" title="这都被你发现了，好啦，算你厉害！">| RESUME |</div>
         </div>
@@ -352,7 +375,7 @@
         "padding:66px 88px;background:url('http://tuaran.site:3001/uploads/61dd3e7989a9f2af212818b1ae726f4d.jpg') no-repeat;background-size:contain;"
     );
     console.log("2. Base📍：", "广州")
-    console.log("3. 毕业院校🏫：", "华南师大")
+    console.log("3. 毕业院校🏫：", "华师（SCNU）")
     console.log("4. 我还关注👀：")
     const focusArr = [{
             "关注": '科哲神学',
@@ -406,14 +429,6 @@
             document.getElementsByClassName("slideTip")[0].style.display = "inline-block"
         } else {
             document.getElementsByClassName("slideTip")[0].style.display = "none"
-        }
-    }, false);
-    document.getElementsByClassName("slideTip")[0].addEventListener("click", function () {
-        var display = document.getElementsByClassName("slideTip1")[0].style.display;
-        if (display == 'none') {
-            document.getElementsByClassName("slideTip1")[0].style.display = "inline-block"
-        } else {
-            document.getElementsByClassName("slideTip1")[0].style.display = "none"
         }
     }, false);
     document.getElementById("toEnglish").addEventListener("click", function () {
